# twitch-highlight-finder

./: .gitignore  LICENCE  README.md  package-lock.json
.github/workflows/: deploy-chat-analyzer.yml  deploy-chatbot.yml  deploy-emote-importer copy.yml  deploy-emote-importer.yml
analyzer/: .dockerignore  Cargo.toml  Dockerfile  README.md
analyzer/src/: main.rs
analyzer/src/analysis/: mod.rs
analyzer/src/analyzer/: mod.rs
analyzer/src/db/: emotes.rs  messages.rs  mod.rs
analyzer/src/parser/: mod.rs
analyzer/src/queue/: mod.rs
bttv-emote-importer/: Cargo.toml  README.md
bttv-emote-importer/src/: main.rs
bttv-emote-importer/src/db/: mod.rs
bttv-emote-importer/src/importer/: mod.rs
chat-community-mapper/: README.md
chatbot/: .gitignore  Cargo.toml  Dockerfile  README.md
chatbot/src/: chat.rs  db.rs  main.rs  parser.rs
chatbot/src/chat/: mod.rs
chatbot/src/database/: mod.rs
chatbot/src/queue/: channel.rs  mod.rs
chatbot/src/twitch/: authentication.rs  eventsub.rs  mod.rs
clipper/: .gitignore  Cargo.toml  Dockerfile  README.md
clipper/src/: main.rs
clipper/src/clipping/: mod.rs
clipper/src/db/: clips.rs  mod.rs
clipper/src/storage/: mod.rs
dashboard/: .eslintrc.json  .prettierrc  next.config.js  package-lock.json  package.json
dashboard/components/: AddChannelModal.tsx  ChannelList.tsx  EmoteImage.tsx  EmoteList.tsx  MessageList.tsx  Spinner.tsx  TopNavigation.tsx
dashboard/lib/: errors.ts  mongodb.ts
dashboard/pages/: _app.tsx  index.tsx
dashboard/pages/api/: channels.ts
dashboard/pages/api/channels/: [channelId].ts  index.ts
dashboard/pages/api/channels/[channelId]/: index.ts  messages.ts
dashboard/pages/api/emotes/: [emoteId].ts  index.ts  next.ts  pending.ts
dashboard/pages/channels/: index.tsx
dashboard/pages/channels/[channelId]/: index.tsx
dashboard/pages/emotes/: index.tsx  queue.tsx
dashboard/styles/: Home.module.css
dashboard/types/: channel.d.ts  models.ts  mongodb.d.ts
emote-importer/: Cargo.toml  Dockerfile  README.md
emote-importer/src/: main.rs
emote-importer/src/db/: mod.rs
emote-importer/src/twitch/: emotes.rs  mod.rs
emote-importer/src/utility/: mod.rs
frankerfacez-emote-importer/: Cargo.toml
frankerfacez-emote-importer/src/: main.rs
frankerfacez-emote-importer/src/db/: mod.rs
frankerfacez-emote-importer/src/importer/: mod.rs
highlight-finder/: Cargo.toml  Dockerfile  README.md
highlight-finder/src/: main.rs
highlight-finder/src/db/: clips.rs  mod.rs  twitch_messages.rs  twitch_vods.rs
highlight-finder/src/finder/: mod.rs
lib/database/: Cargo.toml
lib/database/src/: lib.rs
lib/database/src/channels/: mod.rs
lib/database/src/clips/: mod.rs
lib/database/src/emotes/: mod.rs
lib/database/src/twitch_messages/: mod.rs
lib/database/src/twitch_vods/: mod.rs
lib/queue/: Cargo.toml
lib/queue/src/: lib.rs
live-tracker/: .eslintrc.js  package-lock.json  package.json  tsconfig.json
live-tracker/src/: config.ts  index.ts  queue.ts  response.ts  types.d.ts  verification.ts
scripts/: .flake8  README.md  models.py  plot_emote_percentage.py  plot_messages_per_minute.py  requirements.txt
twitch-chat-collector/: Cargo.toml  README.md
twitch-chat-collector/src/: chat.rs  db.rs  main.rs  parser.rs  queue.rs
twitch-emote-importer/: Cargo.toml  README.md
twitch-emote-importer/src/db/: mod.rs
twitch-emote-importer/src/twitch/: authentication.rs
twitch-emote-importer/src/utility/: mod.rs
twitch-emotes-importer/: Cargo.toml  README.md
twitch-emotes-importer/src/: main.rs
twitch-emotes-importer/src/twitch/: authentication.rs  emotes.rs  mod.rs
twitch-eventsub-hooks/: package-lock.json  package.json  tsconfig.json
twitch-eventsub-hooks/src/: config.ts  index.ts  queue.ts  response.ts  types.d.ts  verification.ts
video-tracker/: Cargo.toml  README.md
video-tracker/src/: main.rs
video-tracker/src/db/: channels.rs  mod.rs  twitch_vods.rs
video-tracker/src/error/: mod.rs
video-tracker/src/twitch/: authentication.rs  mod.rs  videos.rs
