[package]
name = "analyzer"
version = "0.2.0"
edition = "2021"

[dependencies]
aws-config = "0.52.0"
aws-sdk-sqs = "0.22.0"
dashmap = "5.4.0"
dotenv = "0.15.0"
futures = "0.3.25"
mongodb = "2.3.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = "1.23.0"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
