[package]
name = "analyzer"
version = "0.2.1"
edition = "2021"

[dependencies]
dashmap = "5.4.0"
dotenv = "0.15.0"
futures = "0.3.25"
mongodb = "2.3.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = "1.23.0"
queue = { path = "../lib/queue" }

[[bin]]
name = "bootstrap"
path = "src/main.rs"
