[package]
name = "chatbot"
version = "0.0.4"
edition = "2021"
description = "System for collecting Twitch chat messages"
repository = "https://github.com/hougesen/twitch-chat-sentiment-analysis"
authors = ["Mads Hougesen <mads@mhouge.dk>"]

[dependencies]
crossbeam-channel = "0.5.6"
dotenv = "0.15.0"
mongodb = { version = "2.3.1", features = ["sync"], default-features = false }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tungstenite = { version = "0.17.3", features = ["native-tls"] }
url = "2.3.1"
