[package]
name = "chatbot"
version = "0.1.0"
edition = "2021"
description = "System for collecting Twitch chat messages"
repository = "https://github.com/hougesen/twitch-chat-sentiment-analysis"
authors = ["Mads Hougesen <mads@mhouge.dk>"]

[dependencies]
async-channel = "1.8.0"
aws-config = "0.52.0"
aws-sdk-sqs = "0.22.0"
dotenv = "0.15.0"
mongodb = "2.3.1"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full"] }
tungstenite = { version = "0.18.0", features = ["native-tls"] }
queue = { path = "../lib/queue" }

[[bin]]
name = "bootstrap"
path = "src/main.rs"
