[package]
name = "clipper"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.52.0"
aws-sdk-s3 = "0.22.0"
database = { path = "../lib/database" }
dotenv = "0.15.0"
mongodb = "2.3.1"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.23.0", features = ["process"] }

[[bin]]
name = "bootstrap"
path = "src/main.rs"
