[package]
name = "emote-importer"
version = "0.0.2"
edition = "2021"
description = "System for fetching Twitch emotes"
repository = "https://github.com/hougesen/twitch-chat-sentiment-analysis"
authors = ["Mads Hougesen <mads@mhouge.dk>"]

[dependencies]
dotenv = "0.15.0"
mongodb = { version = "2.3.1", features = ["tokio-runtime"] }
reqwest = { default-features = false, version = "0.11.13", features = [
    "json",
    "rustls-tls"
] }
serde = { version = "1.0.147", features = ["derive"] }
tokio = "1.21.2"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
