[package]
name = "emote-importer"
version = "0.0.2"
edition = "2021"
description = "System for fetching Twitch emotes"
repository = "https://github.com/hougesen/twitch-chat-sentiment-analysis"
authors = ["Mads Hougesen <mads@mhouge.dk>"]

[dependencies]
database = { path = "../lib/database" }
dotenv = "0.15.0"
mongodb = "2.3.1"
reqwest = { version = "0.11.13", default-features = false, features = [
    "json",
    "rustls-tls"
] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = "1.23.0"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
