[package]
name = "twitch-emotes-importer"
version = "0.0.1"
edition = "2021"
description = "System for fetching Twitch emotes"
repository = "https://github.com/hougesen/twitch-chat-sentiment-analysis"
authors = ["Mads Hougesen <mads@mhouge.dk>"]

[dependencies]
anyhow = "1.0.66"
dotenv = "0.15.0"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
# TODO: figure out which features are useless
tokio = { version = "1.21.2", features = ["full"] }
