[package]
name = "video-tracker"
version = "0.0.1"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
mongodb = "2.3.1"
reqwest = { version = "0.11.13", default-features = false, features = [
    "json",
    "rustls-tls"
] }
serde = { version = "1.0.151", features = ["derive"] }
tokio = "1.23.0"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
