[package]
name = "queue"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
aws-config = "0.52.0"
aws-sdk-sqs = "0.22.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = "1.23.0"
